--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -504,6 +504,9 @@
   "copyPrivateKey": {
     "message": "This is your private key (click to copy)"
   },
+  "copyRawTransactionData": {
+    "message": "Copy raw transaction data"
+  },
   "copyToClipboard": {
     "message": "Copy to clipboard"
   },
