Add action button so that users can go right to settings from the what's new popup

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1675,6 +1675,10 @@
     "message": "Ledger connection improvement.",
     "description": "Title for a notification in the 'See What's New' popup. Notifies ledger users that there is an improvement in how they can connect their device."
   },
+  "notifications8ActionText": {
+    "message": "Go to Advanced Settings",
+    "description": "Description on an action button that appears in the What's New popup. Tells the user that if they click it, they will go to our Advanced Settings page."
+  },
   "ofTextNofM": {
     "message": "of"
   },
