--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1730,6 +1730,9 @@
   "optional": {
     "message": "Optional"
   },
+  "optionalWithParanthesis": {
+    "message": "(Optional)"
+  },
   "optionalBlockExplorerUrl": {
     "message": "Block Explorer URL (optional)"
   },
