--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,4 +1,7 @@
 {
+  "CurrencySymbol": {
+    "message": "Currency Symbol"
+  },
   "about": {
     "message": "About"
   },
@@ -1732,12 +1735,6 @@
   },
   "optionalWithParanthesis": {
     "message": "(Optional)"
-  },
-  "optionalBlockExplorerUrl": {
-    "message": "Block Explorer URL (optional)"
-  },
-  "optionalCurrencySymbol": {
-    "message": "Currency Symbol (optional)"
   },
   "or": {
     "message": "or"
